#17 In admin mode, some object names are ambiguous