@@ -11,29 +11,31 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 
+import org.apache.commons.lang3.StringUtils;
 import org.eclipse.tradista.core.common.exception.TradistaBusinessException;
 import org.eclipse.tradista.core.common.exception.TradistaTechnicalException;
 import org.eclipse.tradista.core.common.ui.util.TradistaGUIUtil;
 import org.eclipse.tradista.core.common.ui.view.TradistaAlert;
+import org.eclipse.tradista.core.common.ui.view.TradistaCopyDialog;
+import org.eclipse.tradista.core.common.ui.view.TradistaSaveConfirmationDialog;
 import org.eclipse.tradista.core.common.ui.view.TradistaTextInputDialog;
 import org.eclipse.tradista.core.common.util.ClientUtil;
-import org.eclipse.tradista.core.marketdata.model.GenerableCurve;
+import org.eclipse.tradista.core.legalentity.model.LegalEntity;
 import org.eclipse.tradista.core.marketdata.model.InterestRateCurve;
 import org.eclipse.tradista.core.marketdata.model.Quote;
 import org.eclipse.tradista.core.marketdata.model.RatePoint;
 import org.eclipse.tradista.core.marketdata.model.ZeroCouponCurve;
 import org.eclipse.tradista.core.marketdata.service.InterestRateCurveBusinessDelegate;
 import org.eclipse.tradista.core.marketdata.ui.view.ZeroCouponCurveCreatorDialog;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import javafx.beans.property.SimpleLongProperty;
 import javafx.beans.property.SimpleStringProperty;
 import javafx.beans.property.StringProperty;
-import javafx.beans.value.ChangeListener;
-import javafx.beans.value.ObservableValue;
 import javafx.collections.FXCollections;
 import javafx.collections.transformation.FilteredList;
 import javafx.collections.transformation.SortedList;
-import javafx.event.EventHandler;
 import javafx.fxml.FXML;
 import javafx.geometry.Pos;
 import javafx.scene.chart.LineChart;
@@ -42,12 +44,12 @@ import javafx.scene.chart.XYChart;
 import javafx.scene.control.Alert.AlertType;
 import javafx.scene.control.Button;
 import javafx.scene.control.ButtonType;
+import javafx.scene.control.ComboBox;
 import javafx.scene.control.DatePicker;
 import javafx.scene.control.Label;
 import javafx.scene.control.ListView;
 import javafx.scene.control.TableCell;
 import javafx.scene.control.TableColumn;
-import javafx.scene.control.TableColumn.CellEditEvent;
 import javafx.scene.control.TableView;
 import javafx.scene.control.TextField;
 import javafx.scene.layout.VBox;
@@ -71,6 +73,10 @@ import javafx.util.StringConverter;
  ********************************************************************************/
 
 public class ZeroCouponCurvesController extends TradistaGenerableCurveController {
+
+	private static final String YYYY_MM_DD = "yyyy-MM-dd";
+
+	private static final Logger logger = LoggerFactory.getLogger(ZeroCouponCurvesController.class);
 
 	@FXML
 	private TableView<RatePointProperty> pointsTable;
@@ -103,35 +109,28 @@ public class ZeroCouponCurvesController extends TradistaGenerableCurveController
 	private DatePicker pointDatePicker = new DatePicker();
 
 	// This method is called by the FXMLLoader when initialization is complete
+	@SuppressWarnings("unchecked")
 	public void initialize() {
 
 		super.initialize();
 
 		interestRateCurveBusinessDelegate = new InterestRateCurveBusinessDelegate();
 
-		Callback<TableColumn<RatePointProperty, String>, TableCell<RatePointProperty, String>> cellFactory = new Callback<TableColumn<RatePointProperty, String>, TableCell<RatePointProperty, String>>() {
-			public TableCell<RatePointProperty, String> call(TableColumn<RatePointProperty, String> p) {
-				return new EditingCell();
-			}
-		};
+		Callback<TableColumn<RatePointProperty, String>, TableCell<RatePointProperty, String>> cellFactory = _ -> new EditingCell();
 
 		pointDate.setCellValueFactory(cellData -> cellData.getValue().getDate());
 
 		pointRate.setCellFactory(cellFactory);
 
-		pointRate.setOnEditCommit(new EventHandler<CellEditEvent<RatePointProperty, String>>() {
-			@Override
-			public void handle(CellEditEvent<RatePointProperty, String> t) {
-				try {
-					TradistaGUIUtil.parseAmount(t.getNewValue(), "Rate");
-					((RatePointProperty) t.getTableView().getItems().get(t.getTablePosition().getRow()))
-							.setRate(t.getNewValue());
-				} catch (TradistaBusinessException abe) {
-					TradistaAlert alert = new TradistaAlert(AlertType.ERROR, abe.getMessage());
-					alert.showAndWait();
-				}
-				pointsTable.refresh();
+		pointRate.setOnEditCommit(t -> {
+			try {
+				TradistaGUIUtil.parseAmount(t.getNewValue(), "Rate");
+				t.getTableView().getItems().get(t.getTablePosition().getRow()).setRate(t.getNewValue());
+			} catch (TradistaBusinessException abe) {
+				TradistaAlert alert = new TradistaAlert(AlertType.ERROR, abe.getMessage());
+				alert.showAndWait();
 			}
+			pointsTable.refresh();
 		});
 
 		pointRate.setCellValueFactory(cellData -> cellData.getValue().getRate());
@@ -154,137 +153,126 @@ public class ZeroCouponCurvesController extends TradistaGenerableCurveController
 
 		quoteDate.setValue(LocalDate.now());
 
-		curveComboBox.valueProperty().addListener(new ChangeListener<GenerableCurve>() {
-			@Override
-			public void changed(ObservableValue<? extends GenerableCurve> ov, GenerableCurve oldZc, GenerableCurve zc) {
-				if (zc != null) {
-					List<RatePoint> ratePoints = interestRateCurveBusinessDelegate
-							.getInterestRateCurvePointsByCurveId(zc.getId());
-					List<RatePointProperty> properties = FXCollections
-							.observableArrayList(toRatePointPropertyList(ratePoints));
+		curveComboBox.valueProperty().addListener((_, _, zc) -> {
+			if (zc != null) {
+				List<RatePoint> ratePoints = interestRateCurveBusinessDelegate
+						.getInterestRateCurvePointsByCurveId(zc.getId());
+				List<RatePointProperty> properties = FXCollections
+						.observableArrayList(toRatePointPropertyList(ratePoints));
 
-					// 1. Wrap the ObservableList in a FilteredList
-					// (initially display all
-					// data).
-					FilteredList<RatePointProperty> filteredData = new FilteredList<>(
-							FXCollections.observableArrayList(properties));
+				// 1. Wrap the ObservableList in a FilteredList
+				// (initially display all
+				// data).
+				FilteredList<RatePointProperty> filteredData = new FilteredList<>(
+						FXCollections.observableArrayList(properties));
 
-					// 3. Wrap the FilteredList in a SortedList.
-					SortedList<RatePointProperty> sortedData = new SortedList<>(filteredData);
+				// 3. Wrap the FilteredList in a SortedList.
+				SortedList<RatePointProperty> sortedData = new SortedList<>(filteredData);
 
-					// 4. Bind the SortedList comparator to the
-					// TableView
-					// comparator.
-					sortedData.comparatorProperty().bind(pointsTable.comparatorProperty());
+				// 4. Bind the SortedList comparator to the
+				// TableView
+				// comparator.
+				sortedData.comparatorProperty().bind(pointsTable.comparatorProperty());
 
-					// 2. Set the filter Predicate whenever the filter
-					// changes.
-					rateTextField.textProperty().addListener((observable, oldValue, newValue) -> {
-						filteredData.setPredicate(point -> {
-							// If filter text is
-							// empty,
-							// display all
-							// persons.
-							if (newValue == null || newValue.isEmpty()) {
-								return true;
-							}
-							return point.getRate().toString().toUpperCase().contains(newValue.toUpperCase());
-						});
-					});
-
-					pointDatePicker.valueProperty().addListener((observable, oldValue, newValue) -> {
-						filteredData.setPredicate(point -> {
-							// If filter text is
-							// empty,
-							// display all
-							// persons.
-							if (newValue == null) {
-								return true;
-							}
-							return newValue.equals(LocalDate
-									.from(DateTimeFormatter.ofPattern("yyyy-MM-dd").parse(point.getDate().getValue())));
-						});
-					});
-
-					rateTextField.textProperty().addListener((observable, oldValue, newValue) -> {
-						filteredData.setPredicate(point -> {
-							// If filter text is empty, display
-							// all
-							// persons.
-							if (newValue == null || newValue.isEmpty()) {
-								return true;
-							}
-							return point.getRate().toString().contains(newValue);
-						});
-					});
-
-					List<Quote> quotes = quoteBusinessDelegate.getQuotesByCurveId(zc.getId());
-					if (quotes != null) {
-						selectedQuotesList.setItems(FXCollections.observableArrayList(quotes));
+				// 2. Set the filter Predicate whenever the filter
+				// changes.
+				rateTextField.textProperty().addListener((_, _, newValue) -> filteredData.setPredicate(point -> {
+					// If filter text is
+					// empty,
+					// display all
+					// persons.
+					if (newValue == null || newValue.isEmpty()) {
+						return true;
 					}
+					return point.getRate().getValue().toUpperCase().contains(newValue.toUpperCase());
+				}));
 
-					pointsTable.setItems(sortedData);
-					pointsTable.refresh();
-					XYChart.Series<Number, Number> series = new XYChart.Series<Number, Number>();
-					series.setName(zc.getName());
-
-					pointsChart.getData().clear();
-					if (ratePoints != null && !ratePoints.isEmpty()) {
-						long lowerBound = ratePoints.get(0).getDate().toEpochDay();
-						for (RatePoint point : ratePoints) {
-							if (point.getRate() != null) {
-								series.getData().add(new XYChart.Data<Number, Number>(
-										point.getDate().toEpochDay() - lowerBound, point.getRate()));
-							}
-						}
-						pointsChart.getXAxis().setTickLabelRotation(90);
-						((ValueAxis<Number>) pointsChart.getXAxis()).setMinorTickVisible(false);
-						((ValueAxis<Number>) pointsChart.getXAxis())
-								.setTickLabelFormatter(new StringConverter<Number>() {
-
-									@Override
-									public String toString(Number number) {
-										return LocalDate.ofEpochDay(number.longValue() + lowerBound).toString();
-									}
-
-									@Override
-									public Number fromString(String string) {
-										return LocalDate.parse(string, DateTimeFormatter.ISO_DATE).toEpochDay()
-												+ lowerBound;
-									}
-
-								});
-						pointsChart.getXAxis().setLabel("Date");
-						pointsChart.getYAxis().setLabel("Rate");
-						pointsChart.setCreateSymbols(false);
-						pointsChart.getData().add(series);
+				pointDatePicker.valueProperty().addListener((_, _, newValue) -> filteredData.setPredicate(point -> {
+					// If filter text is
+					// empty,
+					// display all
+					// persons.
+					if (newValue == null) {
+						return true;
 					}
-				} else {
-					selectedQuotesList.getItems().clear();
-					pointsTable.setItems(null);
+					return newValue.equals(LocalDate
+							.from(DateTimeFormatter.ofPattern(YYYY_MM_DD).parse(point.getDate().getValue())));
+				}));
 
+				rateTextField.textProperty().addListener((_, _, newValue) -> filteredData.setPredicate(point -> {
+					// If filter text is empty, display
+					// all
+					// persons.
+					if (newValue == null || newValue.isEmpty()) {
+						return true;
+					}
+					return point.getRate().getValue().contains(newValue);
+				}));
+
+				List<Quote> quotes = quoteBusinessDelegate.getQuotesByCurveId(zc.getId());
+				if (quotes != null) {
+					selectedQuotesList.setItems(FXCollections.observableArrayList(quotes));
 				}
+
+				pointsTable.setItems(sortedData);
+				pointsTable.refresh();
+				XYChart.Series<Number, Number> series = new XYChart.Series<>();
+				series.setName(zc.getName());
+
+				pointsChart.getData().clear();
+				if (ratePoints != null && !ratePoints.isEmpty()) {
+					long lowerBound = ratePoints.getFirst().getDate().toEpochDay();
+					for (RatePoint point : ratePoints) {
+						if (point.getRate() != null) {
+							series.getData().add(
+									new XYChart.Data<>(point.getDate().toEpochDay() - lowerBound, point.getRate()));
+						}
+					}
+					pointsChart.getXAxis().setTickLabelRotation(90);
+					((ValueAxis<Number>) pointsChart.getXAxis()).setMinorTickVisible(false);
+					((ValueAxis<Number>) pointsChart.getXAxis()).setTickLabelFormatter(new StringConverter<Number>() {
+
+						@Override
+						public String toString(Number number) {
+							return LocalDate.ofEpochDay(number.longValue() + lowerBound).toString();
+						}
+
+						@Override
+						public Number fromString(String string) {
+							return LocalDate.parse(string, DateTimeFormatter.ISO_DATE).toEpochDay() + lowerBound;
+						}
+
+					});
+					pointsChart.getXAxis().setLabel("Date");
+					pointsChart.getYAxis().setLabel("Rate");
+					pointsChart.setCreateSymbols(false);
+					pointsChart.getData().add(series);
+				}
+			} else {
+				selectedQuotesList.getItems().clear();
+				pointsTable.setItems(null);
+
 			}
 		});
 		try {
 			TradistaGUIUtil.fillComboBox(interestRateCurveBusinessDelegate.getAllGenerationAlgorithms(),
 					algorithmComboBox);
 			canGetGenerationAlgorithms = true;
-		} catch (TradistaTechnicalException tte) {
+		} catch (TradistaTechnicalException _) {
 			canGetGenerationAlgorithms = false;
 		}
 		try {
 			TradistaGUIUtil.fillComboBox(interestRateCurveBusinessDelegate.getAllInterpolators(), interpolatorComboBox);
 			canGetInterpolators = true;
-		} catch (TradistaTechnicalException tte) {
+		} catch (TradistaTechnicalException _) {
 			canGetInterpolators = false;
 		}
 		TradistaGUIUtil.fillComboBox(interestRateCurveBusinessDelegate.getAllInstances(), instanceComboBox);
 		try {
-			Set<ZeroCouponCurve> curves = interestRateCurveBusinessDelegate.getAllZeroCouponCurves();
-			TradistaGUIUtil.fillComboBox(curves, curveComboBox);
-			curveExists = (curves != null && !curves.isEmpty());
-		} catch (TradistaTechnicalException tte) {
+			TradistaGUIUtil.fillZeroCouponCurveComboBox((ComboBox<ZeroCouponCurve>) (ComboBox<?>) curveComboBox);
+			canGetCurve = true;
+			curveExists = (curveComboBox.getItems() != null && !curveComboBox.getItems().isEmpty());
+		} catch (TradistaTechnicalException _) {
 			canGetCurve = false;
 		}
 
@@ -310,20 +298,48 @@ public class ZeroCouponCurvesController extends TradistaGenerableCurveController
 		curve.setQuoteDate(quoteDate.getValue());
 	}
 
+	@SuppressWarnings("unchecked")
 	@FXML
 	protected void save() {
-
 		try {
-			if (curveComboBox.getValue() == null) {
-				throw new TradistaBusinessException("Please select a zeo coupon curve.");
+			boolean isNew = (curve.getId() == 0);
+			LegalEntity po = null;
+			boolean proceed = false;
+
+			if (ClientUtil.currentUserIsAdmin() && isNew) {
+				TradistaSaveConfirmationDialog dialog = new TradistaSaveConfirmationDialog("Zero Coupon Curve",
+						ClientUtil.getCurrentProcessingOrg(), false);
+				Optional<LegalEntity> result = dialog.showAndWait();
+				if (result.isPresent()) {
+					po = result.get();
+					proceed = true;
+				}
+			} else {
+				TradistaAlert confirmation = new TradistaAlert(AlertType.CONFIRMATION);
+				confirmation.setTitle("Save Zero Coupon Curve");
+				confirmation.setHeaderText("Save Zero Coupon Curve");
+				confirmation.setContentText("Do you want to save this Zero Coupon Curve?");
+
+				Optional<ButtonType> result = confirmation.showAndWait();
+				if (result.isPresent() && result.get() == ButtonType.OK) {
+					proceed = true;
+					po = curve.getProcessingOrg();
+				}
 			}
-			buildCurve((ZeroCouponCurve) curve);
-			curve.setId(interestRateCurveBusinessDelegate.saveInterestRateCurve((InterestRateCurve) curve));
-			try {
-				TradistaGUIUtil.fillComboBox(interestRateCurveBusinessDelegate.getAllZeroCouponCurves(), curveComboBox);
-			} catch (TradistaTechnicalException tte) {
-				canSaveCurve = false;
-				throw tte;
+
+			if (proceed) {
+				if (isNew) {
+					curve = new ZeroCouponCurve(curve.getName(), po);
+				}
+				buildCurve((ZeroCouponCurve) curve);
+				curve.setId(interestRateCurveBusinessDelegate.saveInterestRateCurve((InterestRateCurve) curve));
+				try {
+					TradistaGUIUtil
+							.fillZeroCouponCurveComboBox((ComboBox<ZeroCouponCurve>) (ComboBox<?>) curveComboBox);
+				} catch (TradistaTechnicalException tte) {
+					canSaveCurve = false;
+					throw tte;
+				}
 			}
 		} catch (TradistaBusinessException | TradistaTechnicalException te) {
 			TradistaAlert alert = new TradistaAlert(AlertType.ERROR, te.getMessage());
@@ -331,49 +347,60 @@ public class ZeroCouponCurvesController extends TradistaGenerableCurveController
 		}
 	}
 
+	@SuppressWarnings("unchecked")
 	@FXML
 	protected void copy() {
-		boolean curveLoaded = (curve != null);
-		if (!curveLoaded) {
-			TradistaAlert alert = new TradistaAlert(AlertType.ERROR, "Please select a curve.");
-			alert.showAndWait();
-		} else {
-			try {
-				TradistaTextInputDialog dialog = new TradistaTextInputDialog();
-				dialog.setTitle("Curve name");
-				dialog.setHeaderText("Curve name selection");
-				dialog.setContentText("Please choose a Curve name:");
+		try {
+			String copyName = null;
+				LegalEntity po = null;
+				boolean proceed = false;
 
-				Optional<String> result = dialog.showAndWait();
-				if (result.isPresent()) {
-					ZeroCouponCurve copyCurve = new ZeroCouponCurve(result.get(),
-							ClientUtil.getCurrentUser().getProcessingOrg());
+				if (ClientUtil.currentUserIsAdmin()) {
+					TradistaCopyDialog dialog = new TradistaCopyDialog("Zero Coupon Curve", curve.getProcessingOrg(),
+							curve.getName(), false);
+					Optional<TradistaCopyDialog.Result> result = dialog.showAndWait();
+					if (result.isPresent()) {
+						copyName = result.get().getName();
+						po = result.get().getProcessingOrg();
+						proceed = true;
+					}
+				} else {
+					TradistaTextInputDialog dialog = new TradistaTextInputDialog();
+					dialog.setTitle("Curve name");
+					dialog.setHeaderText("Curve name selection");
+					dialog.setContentText("Please choose a Curve name:");
+
+					Optional<String> result = dialog.showAndWait();
+					if (result.isPresent()) {
+						copyName = result.get();
+						po = ClientUtil.getCurrentUser().getProcessingOrg();
+						proceed = true;
+					}
+				}
+
+				if (proceed) {
+					ZeroCouponCurve copyCurve = new ZeroCouponCurve(copyName, po);
 					buildCurve(copyCurve);
 					try {
-						copyCurve.setId(
-								interestRateCurveBusinessDelegate.saveInterestRateCurve((InterestRateCurve) copyCurve));
+						copyCurve.setId(interestRateCurveBusinessDelegate.saveInterestRateCurve(copyCurve));
 					} catch (TradistaTechnicalException tte) {
 						canCopyCurve = false;
 						throw tte;
 					}
 					curve = copyCurve;
-					TradistaGUIUtil.fillComboBox(interestRateCurveBusinessDelegate.getAllZeroCouponCurves(),
-							curveComboBox);
+					TradistaGUIUtil
+							.fillZeroCouponCurveComboBox((ComboBox<ZeroCouponCurve>) (ComboBox<?>) curveComboBox);
 				}
 			} catch (TradistaBusinessException | TradistaTechnicalException te) {
 				TradistaAlert alert = new TradistaAlert(AlertType.ERROR, te.getMessage());
 				alert.showAndWait();
 			}
 		}
-	}
 
+	@SuppressWarnings("unchecked")
 	@FXML
 	protected void delete() {
 		try {
-			if (curve == null) {
-				throw new TradistaBusinessException("No curve name has been selected.");
-			}
-
 			TradistaAlert confirmation = new TradistaAlert(AlertType.CONFIRMATION);
 			confirmation.setTitle("Delete Zero Coupon Curve");
 			confirmation.setHeaderText("Delete Zero Coupon Curve");
@@ -388,7 +415,7 @@ public class ZeroCouponCurvesController extends TradistaGenerableCurveController
 					throw tte;
 				}
 				curve = null;
-				TradistaGUIUtil.fillComboBox(interestRateCurveBusinessDelegate.getAllZeroCouponCurves(), curveComboBox);
+				TradistaGUIUtil.fillZeroCouponCurveComboBox((ComboBox<ZeroCouponCurve>) (ComboBox<?>) curveComboBox);
 			}
 
 		} catch (TradistaBusinessException | TradistaTechnicalException te) {
@@ -414,7 +441,7 @@ public class ZeroCouponCurvesController extends TradistaGenerableCurveController
 		String search = quoteNameTextField.getText();
 		List<Quote> quotes = quoteBusinessDelegate.getQuotesByName(search);
 		if (quotes != null && !quotes.isEmpty() && !selectedQuotesList.getItems().isEmpty()) {
-			List<Quote> notAlreadySelectedQuotes = new ArrayList<Quote>();
+			List<Quote> notAlreadySelectedQuotes = new ArrayList<>();
 			Set<String> productTypes = interestRateCurveBusinessDelegate.getBootstrapableProductTypes();
 			for (Quote quote : quotes) {
 				String product = quote.getName().split("//.")[0];
@@ -446,14 +473,14 @@ public class ZeroCouponCurvesController extends TradistaGenerableCurveController
 			pointsTable.setItems(FXCollections.observableArrayList(toRatePointPropertyList(ratePoints)));
 			pointsTable.refresh();
 			// Update the graph
-			XYChart.Series<Number, Number> series = new XYChart.Series<Number, Number>();
+			XYChart.Series<Number, Number> series = new XYChart.Series<>();
 			series.setName(curveComboBox.getSelectionModel().getSelectedItem().getName());
 
-			long lowerBound = ratePoints.get(0).getDate().toEpochDay();
+			long lowerBound = ratePoints.getFirst().getDate().toEpochDay();
 			for (RatePoint point : ratePoints) {
 				if (point.getRate() != null) {
-					series.getData().add(new XYChart.Data<Number, Number>(point.getDate().toEpochDay() - lowerBound,
-							point.getRate()));
+					series.getData()
+							.add(new XYChart.Data<>(point.getDate().toEpochDay() - lowerBound, point.getRate()));
 				}
 			}
 			pointsChart.getXAxis().setTickLabelRotation(90);
@@ -482,6 +509,7 @@ public class ZeroCouponCurvesController extends TradistaGenerableCurveController
 		}
 	}
 
+	@SuppressWarnings("unchecked")
 	@FXML
 	protected void create() {
 		try {
@@ -496,7 +524,7 @@ public class ZeroCouponCurvesController extends TradistaGenerableCurveController
 					canCreateCurve = false;
 					throw tte;
 				}
-				TradistaGUIUtil.fillComboBox(interestRateCurveBusinessDelegate.getAllZeroCouponCurves(), curveComboBox);
+				TradistaGUIUtil.fillZeroCouponCurveComboBox((ComboBox<ZeroCouponCurve>) (ComboBox<?>) curveComboBox);
 			}
 		} catch (TradistaBusinessException | TradistaTechnicalException te) {
 			TradistaAlert alert = new TradistaAlert(AlertType.ERROR, te.getMessage());
@@ -513,7 +541,7 @@ public class ZeroCouponCurvesController extends TradistaGenerableCurveController
 
 		@Override
 		public void startEdit() {
-			if (textField != null && textField.getText() != null && !textField.getText().equals("")) {
+			if (textField != null && !StringUtils.isEmpty(textField.getText())) {
 				setItem(textField.getText());
 			}
 			super.startEdit();
@@ -555,47 +583,41 @@ public class ZeroCouponCurvesController extends TradistaGenerableCurveController
 		private void createTextField() {
 			textField = new TextField(getString());
 			textField.setMinWidth(this.getWidth() - this.getGraphicTextGap() * 2);
-			textField.focusedProperty().addListener(new ChangeListener<Boolean>() {
-				@Override
-				public void changed(ObservableValue<? extends Boolean> arg0, Boolean arg1, Boolean arg2) {
-					if (!arg2) {
-
-						commitEdit(textField.getText());
-					}
+			textField.focusedProperty().addListener((_, _, isFocused) -> {
+				if (Boolean.FALSE.equals(isFocused)) {
+					commitEdit(textField.getText());
 				}
 			});
 
 		}
 
 		private String getString() {
-			return getItem() == null ? "" : getItem().toString();
+			return getItem() == null ? StringUtils.EMPTY : getItem().toString();
 		}
 	}
 
 	private List<RatePointProperty> toRatePointPropertyList(List<RatePoint> data) {
-		List<RatePointProperty> ratePointPropertyList = new ArrayList<RatePointProperty>();
+		List<RatePointProperty> ratePointPropertyList = new ArrayList<>();
 		if (data != null) {
 			for (RatePoint point : data) {
-				ratePointPropertyList
-						.add(new RatePointProperty(DateTimeFormatter.ofPattern("yyyy-MM-dd").format(point.getDate()),
-								point.getRate() == null ? "" : TradistaGUIUtil.formatAmount(point.getRate())));
+				ratePointPropertyList.add(new RatePointProperty(
+						DateTimeFormatter.ofPattern(YYYY_MM_DD).format(point.getDate()),
+						point.getRate() == null ? StringUtils.EMPTY : TradistaGUIUtil.formatAmount(point.getRate())));
 			}
 		}
 		return ratePointPropertyList;
 	}
 
 	private Map<LocalDate, BigDecimal> toRatePointsMap(List<RatePointProperty> data) throws TradistaBusinessException {
-		Map<LocalDate, BigDecimal> ratePointsMap = new HashMap<LocalDate, BigDecimal>();
+		Map<LocalDate, BigDecimal> ratePointsMap = new HashMap<>();
 		for (RatePointProperty point : data) {
 			try {
 				ratePointsMap.put(
-						LocalDate.from(DateTimeFormatter.ofPattern("yyyy-MM-dd").parse(point.getDate().getValue())),
+						LocalDate.from(DateTimeFormatter.ofPattern(YYYY_MM_DD).parse(point.getDate().getValue())),
 						point.getRate().getValue().isEmpty() ? null
 								: TradistaGUIUtil.parseAmount(point.getRate().getValue(), "Rate"));
-			} catch (DateTimeParseException e) {
-				// TODO add a WARN log and continue
-				// TODO Auto-generated catch block
-				e.printStackTrace();
+			} catch (DateTimeParseException dtpe) {
+				logger.warn(dtpe.getMessage());
 			}
 		}
 
@@ -603,7 +625,7 @@ public class ZeroCouponCurvesController extends TradistaGenerableCurveController
 	}
 
 	private List<Long> toQuoteIdList(List<Quote> data) {
-		List<Long> idList = new ArrayList<Long>();
+		List<Long> idList = new ArrayList<>();
 		for (Quote quote : data) {
 			idList.add(quote.getId());
 		}
@@ -666,21 +688,21 @@ public class ZeroCouponCurvesController extends TradistaGenerableCurveController
 		}
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	@FXML
 	public void refresh() {
 		super.refresh();
 		try {
-			Set<ZeroCouponCurve> curves = interestRateCurveBusinessDelegate.getAllZeroCouponCurves();
-			TradistaGUIUtil.fillComboBox(curves, curveComboBox);
+			TradistaGUIUtil.fillZeroCouponCurveComboBox((ComboBox<ZeroCouponCurve>) (ComboBox<?>) curveComboBox);
 			canGetCurve = true;
 			canSaveCurve = true;
 			canCopyCurve = true;
 			canGenerateCurve = true;
 			canDeleteCurve = true;
 			canCreateCurve = true;
-			curveExists = (curves != null && !curves.isEmpty());
-		} catch (TradistaTechnicalException tte) {
+			curveExists = (curveComboBox.getItems() != null && !curveComboBox.getItems().isEmpty());
+		} catch (TradistaTechnicalException _) {
 			canGetCurve = false;
 			canSaveCurve = false;
 			canCopyCurve = false;
@@ -693,7 +715,7 @@ public class ZeroCouponCurvesController extends TradistaGenerableCurveController
 				TradistaGUIUtil.fillComboBox(interestRateCurveBusinessDelegate.getAllGenerationAlgorithms(),
 						algorithmComboBox);
 				canGetGenerationAlgorithms = true;
-			} catch (TradistaTechnicalException tte) {
+			} catch (TradistaTechnicalException _) {
 				canGetGenerationAlgorithms = false;
 			}
 		}
@@ -702,13 +724,14 @@ public class ZeroCouponCurvesController extends TradistaGenerableCurveController
 				TradistaGUIUtil.fillComboBox(interestRateCurveBusinessDelegate.getAllInterpolators(),
 						interpolatorComboBox);
 				canGetInterpolators = true;
-			} catch (TradistaTechnicalException tte) {
+			} catch (TradistaTechnicalException _) {
 				canGetInterpolators = false;
 			}
 		}
 		updateWindow();
 	}
 
+	@Override
 	public void updateComponents() {
 		super.updateComponents();
 		excludeButton.setDisable(!quoteSetExists || !canGetQuoteSet || !canGetQuote || !canGetCurve
